--- a/Prodavnica/Common/Common.csproj
+++ b/Prodavnica/Common/Common.csproj
@@ -53,12 +53,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICloneable.cs" />
-    <Compile Include="IRacunService.cs" />
+    <Compile Include="IBillService.cs" />
     <Compile Include="Model\Admin.cs" />
+    <Compile Include="Model\BillProducts.cs" />
     <Compile Include="Model\IUser.cs" />
-    <Compile Include="Model\Proizvod.cs" />
-    <Compile Include="Model\Racun.cs" />
-    <Compile Include="Model\RegistrovaniKupac.cs" />
+    <Compile Include="Model\Product.cs" />
+    <Compile Include="Model\Bill.cs" />
+    <Compile Include="Model\RegisteredCustomer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
