--- a/Prodavnica/Client/Client.csproj
+++ b/Prodavnica/Client/Client.csproj
@@ -69,6 +69,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Class\ActionHistory.cs" />
+    <Compile Include="Class\BoolToVisibilityConverter.cs" />
     <Compile Include="Class\Session.cs" />
     <Compile Include="LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
